# churn-prediction

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/k8s/: deployment.yml
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: api_dashboard.json
monitoring/grafana/provisioning/: dashboards.yml
src/: config.py  main.py
src/api/middleware/: logging.py  metrics.py
src/api/routes/: health.py  predict.py
src/api/schemas/: request.py  response.py
src/engine/: base.py  ml_engine.py  rule_engine.py
src/engine/rules/: charge_increase.py  contract_type.py  ticket_frequency.py
src/features/: engineering.py  sentiment.py
src/ml/: data_loader.py  evaluate.py  train.py
src/monitoring/: metrics.py
tests/: conftest.py
tests/integration/: test_health_endpoint.py  test_predict_endpoint.py
tests/ml/: test_data_loader.py  test_ml_engine.py  test_training.py
tests/unit/: test_charge_increase.py  test_contract_type.py  test_feature_engineering.py  test_rule_engine.py  test_sentiment.py  test_ticket_frequency.py
